@@ -1,16 +1,12 @@
 package br.net.silva.business.facade;
 
 import br.net.silva.business.usecase.ActivateAccountUseCase;
-import br.net.silva.business.validations.AccountExistsAndActiveValidate;
-import br.net.silva.business.validations.AccountExistsAndDeactivatedValidate;
 import br.net.silva.business.value_object.input.ActivateAccount;
 import br.net.silva.business.value_object.output.AccountOutput;
-import br.net.silva.daniel.shared.application.gateway.FindApplicationBaseGateway;
+import br.net.silva.daniel.shared.application.gateway.ApplicationBaseGateway;
 import br.net.silva.daniel.shared.application.gateway.ParamGateway;
-import br.net.silva.daniel.shared.application.gateway.Repository;
 import br.net.silva.daniel.shared.application.interfaces.EmptyOutput;
 import br.net.silva.daniel.shared.application.interfaces.GenericFacadeDelegate;
-import br.net.silva.daniel.shared.application.interfaces.IValidations;
 import br.net.silva.daniel.shared.application.interfaces.UseCase;
 import br.net.silva.daniel.shared.application.value_object.Source;
 import br.net.silva.daniel.shared.business.exception.GenericException;
@@ -23,7 +19,6 @@ import org.mockito.MockitoAnnotations;
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.LinkedList;
-import java.util.List;
 import java.util.Optional;
 import java.util.Queue;
 
@@ -31,8 +26,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -40,36 +35,24 @@ class ActivateAccountFacadeTest {
 
     private ActivateAccountUseCase activateAccountUseCase;
 
-    private IValidations accountExistsValidate;
-
     @Mock
-    private Repository<AccountOutput> activateAccountRepository;
-
-    @Mock
-    private Repository<AccountOutput> findAccountRepository;
-
-    @Mock
-    private FindApplicationBaseGateway<AccountOutput> optionalFindAccountGateway;
+    private ApplicationBaseGateway<AccountOutput> baseGateway;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        this.activateAccountUseCase = new ActivateAccountUseCase(activateAccountRepository, findAccountRepository);
-        this.accountExistsValidate = new AccountExistsAndDeactivatedValidate(optionalFindAccountGateway);
+        this.activateAccountUseCase = new ActivateAccountUseCase(baseGateway);
     }
 
     @Test
     void shouldActivateAccountWithSuccess() throws GenericException {
-        when(activateAccountRepository.exec(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
-        when(optionalFindAccountGateway.findById(any(ParamGateway.class))).thenReturn(Optional.of(buildMockAccount(false)));
-        when(findAccountRepository.exec(anyInt(), anyInt(), anyString())).thenReturn(buildMockAccount(false));
+        when(baseGateway.save(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
+        when(baseGateway.findById(any(ParamGateway.class))).thenReturn(Optional.of(buildMockAccount(false)));
 
         Queue<UseCase> useCases = new LinkedList<>();
         useCases.add(activateAccountUseCase);
 
-        List<IValidations> validationsList = List.of(accountExistsValidate);
-
-        var facade = new GenericFacadeDelegate(useCases, validationsList);
+        var facade = new GenericFacadeDelegate(useCases, Collections.emptyList());
         var dtoRequest = new ActivateAccount( 45678, 4321888, "99988877766");
         var source = new Source(EmptyOutput.INSTANCE, dtoRequest);
 
@@ -77,47 +60,48 @@ class ActivateAccountFacadeTest {
 
         assertNotNull(source.output());
 
-        verify(activateAccountRepository).exec(any(AccountOutput.class));
+        verify(baseGateway, times(1)).save(any(AccountOutput.class));
+        verify(baseGateway, times(1)).findById(any(ParamGateway.class));
     }
 
     @Test
     void shouldActivateAccountErrorWhenAccountNotExists() {
-        when(activateAccountRepository.exec(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
-        when(optionalFindAccountGateway.findById(any(ParamGateway.class))).thenReturn(Optional.empty());
-        when(findAccountRepository.exec(anyInt(), anyInt(), anyString())).thenReturn(buildMockAccount(false));
+        when(baseGateway.save(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
+        when(baseGateway.findById(any(ParamGateway.class))).thenReturn(Optional.empty());
 
         Queue<UseCase> useCases = new LinkedList<>();
         useCases.add(activateAccountUseCase);
 
-        List<IValidations> validationsList = List.of(accountExistsValidate);
-
-        var facade = new GenericFacadeDelegate(useCases, validationsList);
+        var facade = new GenericFacadeDelegate(useCases, Collections.emptyList());
         var dtoRequest = new ActivateAccount( 45678, 4321888, "99988877766");
         var source = new Source(EmptyOutput.INSTANCE, dtoRequest);
 
         var exceptionResponse = assertThrows(GenericException.class, () -> facade.exec(source));
         assertNotNull(exceptionResponse);
         assertEquals("Account not exists", exceptionResponse.getMessage());
+
+        verify(baseGateway, never()).save(any(AccountOutput.class));
+        verify(baseGateway, times(1)).findById(any(ParamGateway.class));
     }
 
     @Test
     void shouldActivateAccountErrorWhenAccountIsActive() {
-        when(activateAccountRepository.exec(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
-        when(optionalFindAccountGateway.findById(any(ParamGateway.class))).thenReturn(Optional.of(buildMockAccount(true)));
-        when(findAccountRepository.exec(anyInt(), anyInt(), anyString())).thenReturn(buildMockAccount(false));
+        when(baseGateway.save(any(AccountOutput.class))).thenReturn(buildMockAccount(true));
+        when(baseGateway.findById(any(ParamGateway.class))).thenReturn(Optional.of(buildMockAccount(true)));
 
         Queue<UseCase> useCases = new LinkedList<>();
         useCases.add(activateAccountUseCase);
 
-        List<IValidations> validationsList = List.of(accountExistsValidate);
-
-        var facade = new GenericFacadeDelegate(useCases, validationsList);
+        var facade = new GenericFacadeDelegate(useCases, Collections.emptyList());
         var dtoRequest = new ActivateAccount( 45678, 4321888, "99988877766");
         var source = new Source(EmptyOutput.INSTANCE, dtoRequest);
 
         var exceptionResponse = assertThrows(GenericException.class, () -> facade.exec(source));
         assertNotNull(exceptionResponse);
         assertEquals("Account already active", exceptionResponse.getMessage());
+
+        verify(baseGateway, never()).save(any(AccountOutput.class));
+        verify(baseGateway, times(1)).findById(any(ParamGateway.class));
     }
 
     private AccountOutput buildMockAccount(boolean active) {
